tests/errors/max_02.f90
program max_02
    character(8) :: y
    character :: z
    print *, max(y, z)
end program